--- a/index.css
+++ b/index.css
@@ -15,17 +15,25 @@ input[type=color]::-webkit-color-swatch, input[type=color]::-webkit-color-swatch
 input[type="range"] {
     -webkit-appearance: none;
     appearance: none;
-    background: transparent;
+    background: #fff;
     cursor: pointer;
     width: 190px;
-    height: 5px;
+    height: 8px;
     border: 1px solid #000;
     border-radius: 10px;
+    margin-top: 30px;
 }
 
 input[type="range"]::-webkit-slider-thumb {
   -webkit-appearance: none;
    appearance: none;
+    height: 24px;
+    width: 24px;
+    background-color: #000;
+    border-radius: 50%;
+}
+
+input[type="range"]::-moz-range-thumb {
     height: 24px;
     width: 24px;
     background-color: #000;
