--- a/index.css
+++ b/index.css
@@ -35,6 +35,7 @@ body {
 
 .containerSquares {
     display:grid; 
+    grid-gap: 0;
     background: #fff; 
     min-width: 500px; 
     height: 500px; 
